# ufo-abducktion

./: CMakeLists.txt  README.md
res/: added_string.txt  new_json.json  scene.json  test.json
src/: asset_manager.cpp  asset_manager.h  bean_pool.h  bob.h  camera.cpp  camera.h  file.cpp  file.h  graphics_provider.h  main.cpp  my_scene.h  pool.h  scene.h  scene_system.cpp  scene_system.h  ufo_engine_main.cpp  ufo_engine_main.h  ufo_json.cpp  ufo_json.h  ufo_pge.cpp  ufo_pge.h
